--- a/FirstDemo/FirstDemo.Web/Views/Home/Index.cshtml
+++ b/FirstDemo/FirstDemo.Web/Views/Home/Index.cshtml
@@ -14,6 +14,10 @@
     </script>
 }
 
+<div class="alert alert-danger" role="alert">
+  A simple primary alert—check it out!
+</div>
+
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
