--- a/FirstDemo/FirstDemo.Web/Areas/Admin/Views/Course/Create.cshtml
+++ b/FirstDemo/FirstDemo.Web/Areas/Admin/Views/Course/Create.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model CourseCreateModel
 @{
     ViewData["Title"] = "Create";
 }
@@ -12,42 +12,31 @@
         <!-- general form elements -->
         <div class="card card-primary">
             <div class="card-header">
-            <h3 class="card-title">Create Course</h3>
+                <h3 class="card-title">Create Course</h3>
             </div>
             <!-- /.card-header -->
             <!-- form start -->
-            <form>
-            <div class="card-body">
-                <div class="form-group">
-                <label for="exampleInputEmail1">Course Title</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
-                </div>
-                <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                </div>
-                <div class="form-group">
-                <label for="exampleInputFile">File input</label>
-                <div class="input-group">
-                    <div class="custom-file">
-                    <input type="file" class="custom-file-input" id="exampleInputFile">
-                    <label class="custom-file-label" for="exampleInputFile">Choose file</label>
+            <form role="form" asp-antiforgery="true" asp-action="Create" 
+                asp-area="Admin" asp-controller="Course" method="post">
+                <div class="card-body">
+                    <div class="form-group">
+                        <label asp-for="Title"></label>
+                        <input type="text" class="form-control" asp-for="Title" placeholder="Enter title">
                     </div>
-                    <div class="input-group-append">
-                    <span class="input-group-text">Upload</span>
+                    <div class="form-group">
+                        <label asp-for="Fees"></label>
+                        <input type="text" class="form-control" asp-for="Fees" placeholder="Enter fees">
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="ClassStartDate"></label>
+                        <input type="text" class="form-control" asp-for="ClassStartDate" placeholder="Enter start date">
                     </div>
                 </div>
-                </div>
-                <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                </div>
-            </div>
-            <!-- /.card-body -->
+                <!-- /.card-body -->
 
-            <div class="card-footer">
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
+                <div class="card-footer">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
             </form>
         </div>
         <!-- /.card -->
