--- a/FirstDemo/FirstDemo.Web/Views/Home/Index.cshtml
+++ b/FirstDemo/FirstDemo.Web/Views/Home/Index.cshtml
@@ -5,6 +5,7 @@
 @section Styles
 {
     <link rel="stylesheet" href="~/css/test.css" />
+    <link rel="stylesheet" href="~/scss/StyleSheet.css" />
 }
 
 @section Scripts
@@ -24,5 +25,11 @@
 </div>
 
 
+<div class="box">
+    <p>
+        <button>Click Me</button>
+    </p>
+</div>
 
+<button>Extra Button</button>
 
