--- a/FirstDemo/FirstDemo.Web/Areas/Admin/Views/Course/Index.cshtml
+++ b/FirstDemo/FirstDemo.Web/Areas/Admin/Views/Course/Index.cshtml
@@ -3,5 +3,64 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-header">
+            <h3 class="card-title">DataTable with default features</h3>
+            </div>
+            <!-- /.card-header -->
+            <div class="card-body">
+                <table id="example1" class="table table-bordered table-striped">
+                    <thead>
+                        <tr>
+                            <th>Title</th>
+                            <th>Fees</th>
+                            <th>ClassStartDate</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Trident</td>
+                            <td>Internet
+                                Explorer 4.0
+                            </td>
+                            <td>Win 95+</td>
+                        </tr>
+                        <tr>
+                            <td>Trident</td>
+                            <td>Internet
+                              Explorer 5.0
+                            </td>
+                            <td>Win 95+</td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <th>Title</th>
+                            <th>Fees</th>
+                            <th>ClassStartDate</th>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
+            <!-- /.card-body -->
+        </div>
+    <!-- /.card -->
+    </div>
+    <!-- /.col -->
+</div>
 
+
+@section Scripts
+{
+    <!-- DataTables -->
+    <script src="~/admin/plugins/datatables/jquery.dataTables.min.js"></script>
+    <script src="~/admin/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
+
+    <script>
+        $(function () {
+            $("#courses").DataTable();
+        });
+    </script>
+}
