--- a/FirstDemo/FirstDemo.Web/Areas/Admin/Views/Course/Index.cshtml
+++ b/FirstDemo/FirstDemo.Web/Areas/Admin/Views/Course/Index.cshtml
@@ -3,6 +3,11 @@
     ViewData["Title"] = "Index";
 }
 
+@section Styles
+{
+ <link rel="stylesheet" href="~/admin/plugins/datatables-bs4/css/dataTables.bootstrap4.css"
+}
+
 <div class="row">
     <div class="col-12">
         <div class="card">
