--- a/FirstDemo/FirstDemo.Web/Areas/Admin/Views/Course/Index.cshtml
+++ b/FirstDemo/FirstDemo.Web/Areas/Admin/Views/Course/Index.cshtml
@@ -5,7 +5,7 @@
 
 @section Styles
 {
- <link rel="stylesheet" href="~/admin/plugins/datatables-bs4/css/dataTables.bootstrap4.css"
+ <link rel="stylesheet" href="~/admin/plugins/datatables-bs4/css/dataTables.bootstrap4.css" />
 }
 
 <div class="row">
