--- a/FirstDemo/FirstDemo.Web/Areas/Admin/Views/Course/Index.cshtml
+++ b/FirstDemo/FirstDemo.Web/Areas/Admin/Views/Course/Index.cshtml
@@ -16,7 +16,7 @@
             </div>
             <!-- /.card-header -->
             <div class="card-body">
-                <table id="example1" class="table table-bordered table-striped">
+                <table id="courses" class="table table-bordered table-striped">
                     <thead>
                         <tr>
                             <th>Title</th>
@@ -44,18 +44,18 @@
 @section Scripts
 {
     <!-- DataTables -->
-    <script src="~/admin/plugins/datatables/jquery.dataTables.min.js"></script>
-    <script src="~/admin/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
+    <script src="~/admin/plugins/datatables/jquery.dataTables.js"></script>
+    <script src="~/admin/plugins/datatables-bs4/js/dataTables.bootstrap4.js"></script>
 
     <script>
         $(function () {
-          $("#courses").DataTable({
-              "processing": true,
-              "serverSide": true,
-              "ajax": {
-	           "url": "/admin/course/GetCourseData",
-              },
+            $('#courses').DataTable({
+                "processing": true,
+                "serverSide": true,
+                "ajax": {
+                    "url": "/admin/course/GetCourseData",
+                },
+            });
           });
-        });
     </script>
 }
