--- a/FirstDemo/FirstDemo.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/FirstDemo/FirstDemo.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -870,7 +870,8 @@
 
     <!-- Main content -->
     <section class="content">
-      @RenderBody()
+        <partial name="_ResponsePartial" />
+        @RenderBody()
     </section>
     <!-- /.content -->
   </div>
