--- a/FirstDemo/FirstDemo.Web/Areas/Admin/Views/Course/Create.cshtml
+++ b/FirstDemo/FirstDemo.Web/Areas/Admin/Views/Course/Create.cshtml
@@ -19,17 +19,21 @@
                 <form role="form" asp-antiforgery="true" asp-action="Create" 
                     asp-area="Admin" asp-controller="Course" method="post">
                     <div class="card-body">
+                        <div asp-validation-summary="All" class="text-danger"></div>
                         <div class="form-group">
                             <label asp-for="Title"></label>
                             <input type="text" class="form-control" asp-for="Title" placeholder="Enter title">
+                            <span asp-validation-for="Title" class="text-danger"></span>
                         </div>
                         <div class="form-group">
                             <label asp-for="Fees"></label>
                             <input type="text" class="form-control" asp-for="Fees" placeholder="Enter fees">
+                            <span asp-validation-for="Fees" class="text-danger"></span>
                         </div>
                         <div class="form-group">
                             <label asp-for="ClassStartDate"></label>
                             <input type="text" class="form-control" asp-for="ClassStartDate" placeholder="Enter start date">
+                            <span asp-validation-for="ClassStartDate" class="text-danger"></span>
                         </div>
                     </div>
                     <!-- /.card-body -->
@@ -45,3 +49,9 @@
     </div>
     <!-- /.row -->
 </div><!-- /.container-fluid -->
+
+
+@section Scripts
+{
+	<partial name="_ValidationScriptsPartial" />
+}
