--- a/FirstDemo/FirstDemo.Web/Views/Account/Register.cshtml
+++ b/FirstDemo/FirstDemo.Web/Views/Account/Register.cshtml
@@ -26,6 +26,16 @@
                 <label asp-for="ConfirmPassword"></label>
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
+            <div class="form-floating">
+                <input asp-for="FirstName" class="form-control" autocomplete="first name" aria-required="true" />
+                <label asp-for="FirstName"></label>
+                <span asp-validation-for="FirstName" class="text-danger"></span>
+            </div>
+            <div class="form-floating">
+                <input asp-for="LastName" class="form-control" autocomplete="last name" aria-required="true" />
+                <label asp-for="LastName"></label>
+                <span asp-validation-for="LastName" class="text-danger"></span>
+            </div>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
