--- a/FirstDemo/FirstDemo.Web/Areas/Admin/Views/Course/Index.cshtml
+++ b/FirstDemo/FirstDemo.Web/Areas/Admin/Views/Course/Index.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
+
 @{
     ViewData["Title"] = "Index";
 }
@@ -57,7 +59,10 @@
                 "processing": true,
                 "serverSide": true,
                 "ajax": {
-                    "url": "/admin/course/GetCourseData",
+                    "url": "https://localhost:7255/api/v3/Course/",
+                    "headers": {
+                        "Authorization": 'Bearer @HttpContextAccessor.HttpContext.Session.GetString("token")'
+                    }
                 },
                 "columnDefs": [
                     {
