Event Added and Color Replaced with Css Class([ngClass]) to more reusable feature

--- a/firstdemo-front/src/app/components/button/button.component.html
+++ b/firstdemo-front/src/app/components/button/button.component.html
@@ -1,1 +1,1 @@
-<input type="button" [ngStyle]="{'background-color': color}" value="{{ text }}" />
+<input type="button" [ngClass]="designClass" value="{{ text }}" (click)="onClick()" />
