--- a/firstdemo-front/src/styles.css
+++ b/firstdemo-front/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+.blueBorder {
+    border: 1px solid red;
+    background-color: blueviolet;
+}
